<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.EmployeesLayoutActivity">

    <EditText
        android:id="@+id/editTextEnterNameq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColorHint="#d0ced0"
        android:textSize="20dp"
        android:inputType="text"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#2CB5F3"
        android:padding="15dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextEnterAgeq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textColorHint="#d0ced0"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        android:inputType="number"
        android:background="@drawable/brown_border"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#2CB5F3"
        android:padding="15dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextEnterPhoneq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/brown_border"
        android:hint="@string/enter_phone"
        android:inputType="number"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="#2CB5F3"
        android:textColorHint="#d0ced0"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/editTextSelectGenderq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_gender"
        android:textSize="20dp"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#d0ced0"
        android:padding="15dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/radioGroupGenderq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/radioButtonOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonAddq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="24dp"/>
</LinearLayout>